Add patents section

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,10 @@ main:
     url: /publications/
 
   - title: "Projects"
-    url: /projects/    
+    url: /projects/
+
+  - title: "Patents"
+    url: /patents/
 
   # - title: "Talks"
   #   url: /talks/    
