--- a/_config.yml
+++ b/_config.yml
@@ -81,9 +81,17 @@ publication_category:
   books:
     title: 'Books'
   manuscripts:
-    title: 'Journal Articles'    
+    title: 'Journal Articles'
   conferences:
     title: 'Conference Papers'
+
+patent_category:
+  international:
+    title: 'International Patents'
+  domestic-registered:
+    title: 'Domestic Patents (Registered)'
+  domestic-application:
+    title: 'Domestic Patent Applications'
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -230,6 +238,9 @@ collections:
   projects:
     output: true
     permalink: /:collection/:path/
+  patents:
+    output: true
+    permalink: /:collection/:path/
 
 
 # These settings control how pages and collections are included in the site
@@ -285,6 +296,14 @@ defaults:
       type: talks
     values:
       layout: talk
+      author_profile: true
+      share: true
+  # _patents
+  - scope:
+      path: ""
+      type: patents
+    values:
+      layout: single
       author_profile: true
       share: true
 
