Add Awards and Scholarships page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,6 +17,9 @@ main:
   - title: "Patents"
     url: /patents/
 
+  - title: "Awards and Scholarships"
+    url: /awards/
+
   # - title: "Talks"
   #   url: /talks/    
 
