--- a/_config.yml
+++ b/_config.yml
@@ -238,6 +238,9 @@ collections:
   projects:
     output: true
     permalink: /:collection/:path/
+  awards:
+    output: true
+    permalink: /:collection/:path/
   patents:
     output: true
     permalink: /:collection/:path/
@@ -296,6 +299,14 @@ defaults:
       type: talks
     values:
       layout: talk
+      author_profile: true
+      share: true
+  # _awards
+  - scope:
+      path: ""
+      type: awards
+    values:
+      layout: single
       author_profile: true
       share: true
   # _patents
