--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site_theme               : "default"
 title                    : "Joon Soo Yoo"
 title_separator          : "-"
 name                     : &name "Joon Soo Yoo"
-description              : &description "Assistant Professor at JBNU"
+description              : &description "postdoctoral researcher"
 url                      : https://joonsooyoo.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "joonsooyoo/joonsooyoo.github.io"
@@ -25,11 +25,11 @@ author:
   avatar           : "profile.jpg"
   name             : "Joon Soo Yoo"
   pronouns         : # example: "she/her"  
-  bio              : "Assistant Professor at JBNU"
-  location         : "Jeonju, KR"
-  employer         : "Jeonbuk National University"
+  bio              : "Postdoctoral Researcher in Information Security"
+  location         : "Seoul, KR"
+  employer         : "Korea University"
   uri              : # URL
-  email            : "joonsooyoo@jbnu.ac.kr" 
+  email            : "sandiegojs@gmail.com" 
 
   # Academic websites
   academia         : # URL
